--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>kunalchavan</groupId>
-    <artifactId>RestAssuredRahul2025</artifactId>
+    <artifactId>RestAssuredAPI2025</artifactId>
     <version>1.0-SNAPSHOT</version>
 
     <properties>
